--- a/english.html
+++ b/english.html
@@ -997,6 +997,8 @@ Error message and password prompt
 
 <li>Social skills</li>
 
+<li>Sofa therapy</li>
+
 <li>Sonia</li>
 
 <li>soul</li>
@@ -9153,7 +9155,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200605134439277" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200713160631480" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200723153644656" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9162,7 +9164,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Stalin's basement]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9182,7 +9184,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200718185413223" title="$:/temp/search">
+<div created="20161023184814872" modified="20200723153615444" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10037,10 +10039,15 @@ The idea of the blue marble is the continuation of Iry's thoughts of [[the villa
 
  &lt;&lt;heblink [[לחם]]&gt;&gt;</pre>
 </div>
-<div created="20200226104510035" modified="20200308152617099" tags="[[A friend]] [[Monkeys with car keys]]" title="Breastplate sisters">
+<div created="20200226104510035" modified="20200723154408464" tags="[[A friend]] [[Monkeys with car keys]]" title="Breastplate sisters">
 <pre>[img[pictures/achayot-la-choshen.jpg]]
 
 
+!!![[Yoyo]]:
+
+If you take in consideration that everybody is born of everybody, then everybody is Coens, not in a religious way, because on my behalf religion is not a factor.
+
+I'm a Jewish male, because I was born as Jewish male. My grandma's maiden name was [[Katz|https://en.wikipedia.org/wiki/Katz_(surname)]], so officially I have priest blood running through my veins, but except for that, we're all [[breastplate sisters|https://en.wikipedia.org/wiki/Priestly_breastplate]], one humanity, no differences, [[not in a symbolic way|Imagine]], for riches are not forever.
 
 
 
@@ -11329,8 +11336,12 @@ Or as Alfred used to say:
 
 </pre>
 </div>
-<div created="20200322160521331" modified="20200322160658923" tags="HH Houses" title="Gassisted living">
+<div created="20200322160521331" modified="20200723152343721" tags="HH Houses" title="Gassisted living">
 <pre>[img[pictures/diyur-mugaz.jpg]]
+
+!!![[Gura]]:
+
+Gassisted living in [[Genesis Hilltop]], is the gem, that arrived thanks to [[Tethys|Tethys ocean]] offshore platform's pipe. 
 
 
  &lt;&lt;heblink [[דיור מוגז]]&gt;&gt;</pre>
@@ -11344,10 +11355,14 @@ Or as Alfred used to say:
  &lt;&lt;heblink [[מיצפרש]]&gt;&gt;
 </pre>
 </div>
-<div created="20200625132023513" modified="20200625132244400" tags="HH Houses Families" title="Genesis Hilltop">
+<div created="20200625132023513" modified="20200723151734298" tags="HH Houses Families" title="Genesis Hilltop">
 <pre>[img[pictures/mizpe-reshit.jpg]]
 
 
+!!![[Gura]]:
+
+Genesis Hilltop, is a locality that [[Tethys offshore|Tethys ocean]] platform was a mere excuse for its necessary establishment.
+On the east side lays [[Marina quarter|Marina Zoto]], that afterwards turns into a construction site where [[Shalom's|Shalom]] building among other things is to be found. 
 
 
 
@@ -11963,7 +11978,7 @@ He thinks Rita got sick because of me. I don't know how he spends his spare time
 
 </pre>
 </div>
-<div created="20200212174127022" modified="20200713160738241" tags="Music [[How many songs can you even invent at all]] [[The global village]] [[Stories from the future]]" title="Imagine">
+<div created="20200212174127022" modified="20200723153639629" tags="Music [[How many songs can you even invent at all]] [[The global village]] [[Stories from the future]]" title="Imagine">
 <pre>!!![[Coen Sisters]]:
 
 [[you may say i'm a dreamer|https://www.youtube.com/watch?v=L6svOHFSAH8]]
@@ -11977,7 +11992,7 @@ He thinks Rita got sick because of me. I don't know how he spends his spare time
 
 
 
- &lt;&lt;heblink [[imagine]]&gt;&gt;
+ &lt;&lt;heblink [[Imagine]]&gt;&gt;
 
 
 
@@ -14388,6 +14403,18 @@ A basic first answer is: &quot;I'll think about it&quot;.
  &lt;&lt;heblink [[כישורים חברתיים]]&gt;&gt;
 </pre>
 </div>
+<div created="20200723145522054" modified="20200723162017252" tags="[[True stories]] [[On the road to somewhere]] [[Corona beings]]" title="Sofa therapy">
+<pre>[img[pictures/sofatherapy.jpg]]
+
+
+&lt;&lt;list-links filter:&quot;[tag[Sofa therapy]]&quot;&gt;&gt;
+
+
+
+
+ &lt;&lt;heblink [[טיפולים מהספה]]&gt;&gt;
+</pre>
+</div>
 <div created="20200219171119429" modified="20200219174729181" tags="[[Coen sister]] Baking [[Menopause sisters]]" title="Sonia">
 <pre>[img[pictures/sonya.jpg]]
 
@@ -14682,11 +14709,12 @@ When I was a student, I used to work as a security guard at the Editorial's yard
 
 </pre>
 </div>
-<div created="20200322165857658" modified="20200322170009109" tags="HH" title="Tethys ocean">
+<div created="20200322165857658" modified="20200723152049510" tags="HH" title="Tethys ocean">
 <pre>[img[pictures/tethys-sea.jpg]]
 
+!!![[Gura]]:
 
-
+A gas field, all of its future output is sold to an authority that prefers to remain anonymous in exchange to developing [[Marina Zoto]] and [[Gesund-heights|Gesund-Heights]] as [[gassisted living|Gassisted living]] assets. 
 
 
  &lt;&lt;heblink [[ים טתיס]]&gt;&gt;
@@ -14710,8 +14738,14 @@ When I was a student, I used to work as a security guard at the Editorial's yard
 
  &lt;&lt;heblink [[נאמני הגנזך]]&gt;&gt;</pre>
 </div>
-<div created="20200628140937832" modified="20200629161228230" tags="HH" title="The artist">
+<div created="20200628140937832" modified="20200723150801205" tags="HH" title="The artist">
 <pre>[img[pictures/theartist.jpg]]
+
+!!![[Gura]];
+
+I've tried to describe the tasteless taste of Heidi, a particular tasteless [[K sister|The K Sisters]], but apparently I didn't got into this, because Heidi is so much tasteless that what the picture portraits.
+
+Her hair is very short, but out of her nape hair hangs a braid. She's weightly challenged and usually covers up in mini leggings, over them she wears colorful or black tunics, over them she wears a huge amount of large jewelry with stones full of sentimental stories. The lucky woman is even married to a wealthy hubby. 
 
 
 
@@ -14884,10 +14918,15 @@ It's hard to believe, that in a room that I love so much, a filthy man's work wa
  &lt;&lt;heblink [[הקליניקה]]&gt;&gt;
 </pre>
 </div>
-<div created="20200628140105938" modified="20200628140358737" tags="HH" title="The counselor">
+<div created="20200628140105938" modified="20200723150515215" tags="HH" title="The counselor">
 <pre>[img[pictures/thecounselor.jpg]]
 
 
+!!![[Gura]]:
+
+Sigalit is not just a counselor- she's a spiritual counselor. She's [[a K|The K Sisters]] from birth, her full name is Sigalit Kalman.
+
+She's really thin, and she owns an Egyptian cat that is by her side at all times. She left a real estate career because it didn't match &quot;the light&quot;. Divorcee disgusting. 
 
 
 
@@ -15079,10 +15118,17 @@ Because, it's not that bad if a little bit of fruit sauce get spilled on the mea
 
  &lt;&lt;heblink [[חודג' שמחת המזל]]&gt;&gt;</pre>
 </div>
-<div created="20200322160856797" modified="20200322161001897" tags="HH Houses" title="The Hostel">
+<div created="20200322160856797" modified="20200723152616758" tags="HH Houses" title="The Hostel">
 <pre>[img[pictures/the-hostel.jpg]]
 
 
+!!![[Gura]]:
+
+The hostel is on the fourth floor of [[Gesund-heights|Gesund-Heights]], its entrance right in front of the building's elevator's opening.
+
+The prices are reasonable, the hostel includes ten ‏teeny-tiny rooms, that include a tiny space where the shower is above the toilet.
+
+In the middle of the hostel lays a nice &quot;living&quot; room full with sofas and couches and TV screens and speakers, a kitchen emerges at the end.
 
 
  &lt;&lt;heblink [[ההוסטל]]&gt;&gt;
@@ -15717,7 +15763,7 @@ Who doesn't like the taste of [[real blood|https://www.imdb.com/title/tt0844441/
 
 </pre>
 </div>
-<div created="20200212204228178" modified="20200628141020760" tags="[[True stories]] [[Single parent children]] Children [[Here in the Ghetto]] [[Corona beings]] Windows" title="TV">
+<div created="20200212204228178" modified="20200723145748313" tags="[[True stories]] [[Single parent children]] Children [[Here in the Ghetto]] [[Corona beings]] Windows" title="TV">
 <pre>[img[pictures/television.jpg]]
 
 
