--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ Error message and password prompt
 
 <li>HH</li>
 
-<li>imagine</li>
+<li>Imagine</li>
 
 <li>Jazz</li>
 
@@ -758,6 +758,8 @@ Error message and password prompt
 <li>טוסטים עם טחינה, רסק עגבניות, מעליהם קישואים וכרוב אפויים ופרמז'ן</li>
 
 <li>טורט</li>
+
+<li>טיפולים מהספה</li>
 
 <li>טל בייגלס</li>
 
@@ -9251,7 +9253,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200601071032468" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200609193106724" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200723171850587" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9260,7 +9262,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[ג'ון אירווינג]] [[המרתף של סטלין]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[טיפולים מהספה]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9280,7 +9282,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200723111508005" title="$:/temp/search">
+<div created="20161023184814872" modified="20200723172246359" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9441,12 +9443,12 @@ tootdiv a:visited {text-decoration: none; color: #700}</pre>
 <div _canonical_uri="pictures/bjVmMLrT1A6cNJ2g.jpg" created="20161024112200319" modified="20170119202336098" tags="" title="bg" type="image/jpeg">
 <pre></pre>
 </div>
-<div created="20190221150238201" modified="20200513145906222" tags="[[חלומות שחלמנו]] [[קופים ממונעים]] [[אירי וגורה]] טלוויזיה [[הכפר הגלובלי]] סגירים משפחות [[סיפורים מהעתיד]]" title="blue-marble-hood">
+<div created="20190221150238201" modified="20200723153735145" tags="[[חלומות שחלמנו]] [[קופים ממונעים]] [[אירי וגורה]] טלוויזיה [[הכפר הגלובלי]] סגירים משפחות [[סיפורים מהעתיד]]" title="blue-marble-hood">
 <pre>[img[pictures/blue-marble.jpg]]
 
 !!![[אירי וגורה]]:
 
-אנו שתינו נרגשות - זורקות כפפה על פני המים הגלובליים, ומציעות את הקמת קהילת [[בלו-מארבל-הוד|https://www.youtube.com/watch?v=Hp7OrYaXgb8]], כהתחלה של [[גוף גלובלי|imagine]], אליה יוכלו אנשים ללא הבדלי דת גזע או מגדר לחבור, באם יעמדו בתנאי קבלה שיקבעו. כמו כן, במדינות שיכריזו על עצמן כ-blue marble friendly, וכחלק מהסכמים עם שני הצדדים, יוכלו אנשי המארבל לחיות חיים מלאים.
+אנו שתינו נרגשות - זורקות כפפה על פני המים הגלובליים, ומציעות את הקמת קהילת [[בלו-מארבל-הוד|https://www.youtube.com/watch?v=Hp7OrYaXgb8]], כהתחלה של [[גוף גלובלי|Imagine]], אליה יוכלו אנשים ללא הבדלי דת גזע או מגדר לחבור, באם יעמדו בתנאי קבלה שיקבעו. כמו כן, במדינות שיכריזו על עצמן כ-blue marble friendly, וכחלק מהסכמים עם שני הצדדים, יוכלו אנשי המארבל לחיות חיים מלאים.
 
 הרעיון לבלו מארבל הוא המשך למחשבות של אירי על [[הכפר|גלות]].
 
@@ -9494,7 +9496,7 @@ You see it written left to right because it is tagged `LTR` (uppercase).
 
 &lt;&lt;englink [[HH]]&gt;&gt;</pre>
 </div>
-<div created="20170504194252766" modified="20200513145931911" tags="[[כמה שירים כבר אפשר להמציא בכלל]] מוזיקה [[הכפר הגלובלי]] סגירים [[סיפורים מהעתיד]]" title="imagine">
+<div created="20170504194252766" modified="20200723153659267" tags="[[כמה שירים כבר אפשר להמציא בכלל]] מוזיקה [[הכפר הגלובלי]] סגירים [[סיפורים מהעתיד]]" title="Imagine">
 <pre>[img[pictures/imagine.jpg]]
 
 !!![[האחיות כהן]]:
@@ -10258,10 +10260,10 @@ Sunny one so true, I love you.//
 
 </pre>
 </div>
-<div created="20170423214419764" modified="20200501135503416" tags="[[קופים ממונעים]] [[אני רוצה להתנצל]] חבר ילדים משפחות [[החיים נועדו למי שלא יכול להתמודד עם סמים]]" title="אחות כהן">
+<div created="20170423214419764" modified="20200723153750774" tags="[[קופים ממונעים]] [[אני רוצה להתנצל]] חבר ילדים משפחות [[החיים נועדו למי שלא יכול להתמודד עם סמים]]" title="אחות כהן">
 <pre>[img[pictures/achot-coen.jpg]]
 
-[[שלום ואהבה|imagine]].
+[[שלום ואהבה|Imagine]].
 
 &lt;&lt;list-links filter:&quot;[tag[אחות כהן]]&quot;&gt;&gt;
 
@@ -10291,7 +10293,7 @@ Sunny one so true, I love you.//
 &lt;&lt;englink [[Cat Sisters]]&gt;&gt;
 </pre>
 </div>
-<div created="20170612182534470" modified="20200308152706260" tags="[[קופים ממונעים]] חבר" title="אחיות לחושן">
+<div created="20170612182534470" modified="20200723153806104" tags="[[קופים ממונעים]] חבר" title="אחיות לחושן">
 <pre>[img[pictures/achayot-la-choshen.jpg]]
 
 !!![[יויו]]:
@@ -10299,7 +10301,7 @@ Sunny one so true, I love you.//
 
 אם לקחת בחשבון שכולם נולדו מכולם, אז כולם גם כוהנים, ולא בקטע של דת, כי מבחינתי דת היא לא פקטור.
 
-אני זכר יהודי, כי נולדתי זכר יהודי. שם הבתולין של סבתי היה כ&quot;ץ, ככה שברשמי זורמת בדמי כוהנות, אך פרט לאלה, כולנו [[אחיות לחושן|https://he.wikipedia.org/wiki/%D7%97%D7%95%D7%A9%D7%9F]], אנושות אחת, ללא הבדלים, [[ולא בקטע של סמלים|imagine]], ולא לעולם חוסן.
+אני זכר יהודי, כי נולדתי זכר יהודי. שם הבתולין של סבתי היה כ&quot;ץ, ככה שברשמי זורמת בדמי כוהנות, אך פרט לאלה, כולנו [[אחיות לחושן|https://he.wikipedia.org/wiki/%D7%97%D7%95%D7%A9%D7%9F]], אנושות אחת, ללא הבדלים, [[ולא בקטע של סמלים|Imagine]], ולא לעולם חוסן.
 
 
 
@@ -11103,7 +11105,7 @@ Is where I want to be
 
 &lt;&lt;englink [[Beta VeGriga]]&gt;&gt;</pre>
 </div>
-<div created="20190415190001072" modified="20200713154654888" tags="קפה [[חיות אוכל]] [[מטא בדיון]] לחם" title="בתי קפה">
+<div created="20190415190001072" modified="20200723145449911" tags="קפה [[חיות אוכל]] [[מטא בדיון]] לחם" title="בתי קפה">
 <pre>[img[pictures/coffee-shops.jpg]]
 
 !!![[הצוות]]:
@@ -12537,7 +12539,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 &lt;&lt;englink [[Hunky Dory]]&gt;&gt;
 </pre>
 </div>
-<div created="20170504162635914" modified="20200426133852488" tags="[[קופים ממונעים]] סגירים משפחות" title="האסיפה הראשונה">
+<div created="20170504162635914" modified="20200723153826421" tags="[[קופים ממונעים]] סגירים משפחות" title="האסיפה הראשונה">
 <pre>[img[pictures/asefot.jpg]]
 
 !!![[פיליפ]]:
@@ -12548,7 +12550,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 יויו עמד מול כולם, ובדרכו המתנדנדת ביקש [[מפה|פה]] לעמוד קרוב אליו, וסיפר איך לפני כמה ימים העליב אותו,  כשלא לגמרי הבין את כוונתו של יויו, כשערכו את הפרק הראשון של סדרת הפורנו האינטרנטית שלו.
 
-&quot;זה קרה לפני חמישה ימים, [[שפגעתי|ממשיכים לדמם]] בפה, וזה לא הניח לי מאז. אני ממש מתבייש, כי ממש צעקתי עליו ודיברתי לא יפה. מצד שני, אני רק בנאדם, ובסופו של דבר קראתי לכם, כדי להגיד לכם, שכולנו כואבים וכולנו מכאיבים, וחוץ מהדברים המגניבים כאן בגנזך, אני חושב שאם רוצים באמת להשפיע, אז צריך לספר את [[הסיפורים האמיתיים|סיפורים אמיתיים]] כמו שהם, ושאין מה להתבייש בכלום, אפילו לא בהתקפי הזעם של גורה, ואני מבקש שתכתבו - לא בקטע של מרגש - כי אם בקטע של [[חשוב|imagine]], 
+&quot;זה קרה לפני חמישה ימים, [[שפגעתי|ממשיכים לדמם]] בפה, וזה לא הניח לי מאז. אני ממש מתבייש, כי ממש צעקתי עליו ודיברתי לא יפה. מצד שני, אני רק בנאדם, ובסופו של דבר קראתי לכם, כדי להגיד לכם, שכולנו כואבים וכולנו מכאיבים, וחוץ מהדברים המגניבים כאן בגנזך, אני חושב שאם רוצים באמת להשפיע, אז צריך לספר את [[הסיפורים האמיתיים|סיפורים אמיתיים]] כמו שהם, ושאין מה להתבייש בכלום, אפילו לא בהתקפי הזעם של גורה, ואני מבקש שתכתבו - לא בקטע של מרגש - כי אם בקטע של [[חשוב|Imagine]], 
 
 כשהוא אמר את זה נזכרתי באיתן שלי, בני הצעיר, וכמה קשה לי איתו, אני הפסיכיאטר, [[הולך יחף|אני הפסיכיאטר]].
 
@@ -13988,6 +13990,30 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[Torte]]&gt;&gt;</pre>
 </div>
+<div created="20200723145049512" modified="20200723184827350" tags="[[בדרך לאן שהוא]] [[סיפורים אמיתיים]] [[הלכות קורונה]]" title="טיפולים מהספה">
+<pre>[img[pictures/sofatherapy.jpg]]
+
+
+
+!!![[רוז'ה]]:
+
+בעטיה של קורונה התמכרתי שוב לרביצה על הספה, הזמנת משלוחי מזון ושתייה, צפייה בסדרות, גידול כרס וחירפון כללי, אך המרפא העצמי שבי קרא אותי לסדר, וכך קרה שאגב הנ&quot;ל ארגנתי רשימת רעיונות לטיפול עצמי בעודך שוכב על הספה ומעכל, והיא תגיע לכאן בקרוב מגובה בציורים של גורה. 
+
+
+
+
+&lt;&lt;list-links filter:&quot;[tag[טיפולים מהספה]]&quot;&gt;&gt;
+
+
+
+
+
+&lt;&lt;englink [[Sofa therapy]]&gt;&gt;
+
+
+
+</pre>
+</div>
 <div created="20181209115549031" modified="20200502115916140" tags="[[כאן בגטו]] מסעדות [[חיות אוכל]] קפה [[בתי קפה]] מטבחים לחם" title="טל בייגלס">
 <pre>[img[pictures/tal-bagels.jpg]]
 
@@ -14833,7 +14859,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 &lt;&lt;englink [[Wishing star 23]]&gt;&gt;
 </pre>
 </div>
-<div created="20171122161036898" modified="20200330150251387" tags="[[כוכב המשאלות בעל תשע הצלעות]]" title="כוכב המשאלות 24">
+<div created="20171122161036898" modified="20200723153854872" tags="[[כוכב המשאלות בעל תשע הצלעות]]" title="כוכב המשאלות 24">
 <pre>[img[pictures/cochav-24.jpg]]
 
 
@@ -14845,7 +14871,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 היזהרי ממני, השיבה לה אירי ופרצה בצחוק של מבוכה שהתגלגל עד שעצרה אותו והמשיכה לשאת את דבריה.
 שתינו ראינו, כמו רבים אחרים, את אווילותה של האנושות. ייתכן שקהלת צדק, והבל הבלים הכול הבל ומה יתרון לכל עמלנו, אך כל הטמבלים מרוב מדינות העולם, ובמיוחד המגה אימפריאליסטים חובבי הלוחמה שביניהם, טרם הבינו דבר פעוט. הם טרם הבינו כי כדורנו החביב לו קראנו ארץ הנו אולי בכלל כדור נידח בפאתי גלקסיה רחוקה, שכף רגל, מה שנקרא בפינו חייזר, רק החלה לדרוך בו בעשרות או באלפים האחרונים. אנחנו פרימיטיבים לחלוטין בכל דבר ומובן, אך טיפשותנו הבלתי נדלית והצורך לכבוש גרמו לנו לחשוב שאנחנו משהו. ובכן גורי ואני חושבות שאנחנו לא משהו ויש לנו רעיון לפתרון מדיני. נשטח אותו בפניכם בהמשך וזה המידע לעת עתה.
 אתן אדירות, אמר ג'וזף.
-אפילו לדןדן לא סיפרתי על זה ואסור שמשהו מזה יצא מהחדר הזה בשלב הזה כי אנחנו חושבות שזה רעיון פנטסטי [[שג'ון לנון|imagine]] היה ממש אוהב וגם [[שרל'ה|שרלה הייתה אוהבת את זה]], הוסיפה גורה, וזה חייב להיות רשום באתר לפני שמישהו אחר ידבר על זה.
+אפילו לדןדן לא סיפרתי על זה ואסור שמשהו מזה יצא מהחדר הזה בשלב הזה כי אנחנו חושבות שזה רעיון פנטסטי [[שג'ון לנון|Imagine]] היה ממש אוהב וגם [[שרל'ה|שרלה הייתה אוהבת את זה]], הוסיפה גורה, וזה חייב להיות רשום באתר לפני שמישהו אחר ידבר על זה.
 ועוד משהו, אם תרשו לי אשמח למלא את החלל שאווה תותיר [[בקליניקה|הקליניקה]] ולבוא לגור איתכם כי אני זקוקה לכם עדיין, אירי הוסיפה והביטה בשלושת דיירי הבית.
 בטח שאת יכולה איריקה, יויו קפץ, אני מבקש לשמוע על הפתרון המדיני שלכן. 
 ואנחנו חושבים שברור שאת ברוכה הבאה, אמרו דןדן וגורה יחדיו, ושאני נעלב שלא סיפרתן לי, במיוחד את, אירי, חשבתי שאני איש הסוד שלך, דןדן הוסיף וצחק.
@@ -16693,12 +16719,12 @@ We rise to play a greater part.
 
 &lt;&lt;englink [[Hand activator ]]&gt;&gt;</pre>
 </div>
-<div created="20190418113727292" modified="20200226071207093" tags="[[כאן בגטו]]" title="מפת הגטו">
+<div created="20190418113727292" modified="20200723153908958" tags="[[כאן בגטו]]" title="מפת הגטו">
 <pre>[img[pictures/ghettos-map.jpg]]
 
 !!![[תומר]]:
 
-אלה פחות או יותר תחומי הגטו מבחינתי, אשר לגבולותיו [[גמישות|blue-marble-hood]] חוצה [[גבולות|imagine]].
+אלה פחות או יותר תחומי הגטו מבחינתי, אשר לגבולותיו [[גמישות|blue-marble-hood]] חוצה [[גבולות|Imagine]].
 
 
 
@@ -19574,18 +19600,19 @@ Fapina''
 &lt;&lt;englink [[Radio epgb]]&gt;&gt;
 </pre>
 </div>
-<div created="20161115145921007" modified="20200220075020910" tags="[[אחות כהן]]" title="רוז'ה">
+<div created="20161115145921007" modified="20200723171422029" tags="[[אחות כהן]]" title="רוז'ה">
 <pre>[img[pictures/5VdqSTjL1ficmZ1K.jpg]]
 
 
 !!![[יויו]]:
 
 כשראיתי בפעם הראשונה את רוז'ה הושלמה מבחינתי דמותו של שלמה קומפלישן, עורך הוידאו הסטלן, שמצלם ועורך 12 סרטוני וידאו קצרצרים בהם הוא מציע סוגים שונים של מדיטציה, שעל דמותו חשבתי בתקופה שאחרי [[אלה|כוכב המשאלות 04]].
-הוא ג'ינג'י לא גדול, אך מעט מסורבל, עם עיני דב טובות בצבע דבש, הוא מצחקק תדיר אל תוך עצמו ונע בחוסר.
-כן, הרבה שעות מדיטציה נדרשות. 
+הוא ג'ינג'י לא גדול, אך מעט מסורבל, עם עיני דב טובות בצבע דבש, הוא מצחקק תדיר אל תוך עצמו ונע בחוסר שקט.
+כן, [[הרבה שעות מדיטציה נדרשות|טיפולים מהספה]]. 
 
-על כל פנים, בתקופה הקשה ביותר בהבראתה של גורה, הוא הגיע לבית החולים עם קבוצה של מתמחים ברפואה אלטרנטיבית/משלימה, ומיד התחבר לגורה והיא אליו. 
+על כל פנים, בתקופה הקשה ביותר בהבראתה של גורה, הוא הגיע לבית החולים עם קבוצה של מתמחים ברפואה אלטרנטיבית, ומיד התחבר לגורה והיא אליו. 
 הוא אדם עם חשיבה מקורית. כשהוא מקשיב לך, הוא מביט בך בשקט מבלי להסיר את עיניו. הוא בן 36. הוא נולד בפריז. אביו, שנפטר לפני שלוש שנים, היה פקיד במשרדי מס הכנסה. אמו עובדת בגלרי לה פאייט ויש לו אח בן 29.
+
 הוא סיים תיכון במגמת קולנוע, וכבר כנער פרנס עצמו מעריכת סרטי משפחה. כשהיה בן 22 נאלץ להיגמל מהמורפיום ששיכך את כאבי הטיפולים בסרטן בלוטות הלימפה שנתגלה אצלו שנתיים קודם. 
 בשנים בהן היה חולה וגם אחריהן הוא עבר סוגים שונים של טיפולים אלטרנטיביים תוך שהוא ממשיך לעבוד כעורך וידאו.
 
