--- a/english.html
+++ b/english.html
@@ -9164,7 +9164,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[What have you done for peace today]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[The lab]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -15193,7 +15193,7 @@ A K sister [[will forever be|HH]] a K sister
 
 </pre>
 </div>
-<div created="20200202172756391" modified="20200725182403422" tags="Metafiction Houses [[The archive's trustees]] Closers [[Life is for those who can't deal with drugs]]" title="The lab">
+<div created="20200202172756391" modified="20200726094836463" tags="Metafiction Houses [[The archive's trustees]] Closers [[Life is for those who can't deal with drugs]]" title="The lab">
 <pre>
 [img[pictures/hamaabada.jpg]]
 
@@ -15203,7 +15203,7 @@ A K sister [[will forever be|HH]] a K sister
 
 !!![[Gura]]:
 
-[[When we were here|In the Animal Farm]], the grass in front of the house was tall, and reached up to the descent of the river. In the fall and in the winter it was full with flowers. Daffodils, Cyclamens, Anemones.
+[[When we were here|In the Animal Farm]], the grass in front of the house was tall, and reached up to the descent to the river. In the fall and in the winter it was full with flowers. Daffodils, Cyclamens, Anemones.
  
 In fact, Yoyo lived here in the time when he got attached to the [[keyboard|Keyboard]] and became [[Eva Coen|Eva]], and I functioned as a sister, who visits often. 
 
