--- a/english.html
+++ b/english.html
@@ -15193,7 +15193,7 @@ A K sister [[will forever be|HH]] a K sister
 
 </pre>
 </div>
-<div created="20200202172756391" modified="20200726094836463" tags="Metafiction Houses [[The archive's trustees]] Closers [[Life is for those who can't deal with drugs]]" title="The lab">
+<div created="20200202172756391" modified="20200726141458924" tags="Metafiction Houses [[The archive's trustees]] Closers [[Life is for those who can't deal with drugs]]" title="The lab">
 <pre>
 [img[pictures/hamaabada.jpg]]
 
@@ -15213,7 +15213,7 @@ That's what we wrote back then:
 .
 The sisters started their activity at hard times, they wrote the characters as an attempt to heal themselves out of hurtful human encounters, and to cheer their heart  in any possible way, while watching rebroadcasts of [[Odetta|https://www.google.co.il/search?source=univ&amp;tbm=isch&amp;q=odetta+schwartz&amp;sa=X&amp;ved=2ahUKEwi0uZSg-OjqAhUnMewKHZJSCggQsAR6BAgLEAE&amp;biw=1366&amp;bih=626]], when in the middle of the creation stands the sentence by sister author [[John Irving]]: “Life is serious but art is fun!”
 
-Its name was given out of respect and love to the creating brothers [[Ethan and Joel Coen]], who write, direct and even edit their movies. It was founded by Hebrew women - blind in blue and white.
+Its name was given out of respect and love to the creating brothers [[Ethan and Joel Coen]], who write, direct and even edit their movies. It was founded by [[Israelites|https://en.wikipedia.org/wiki/Israelites]] women - blind in blue and white.
 
 It's a growing group of people, who was founded as a joke, and continue to exist in an unfathomable dedication, with humor and decency - in [[Kibbutzs' rooms|https://en.wikipedia.org/wiki/Kibbutz]], in city apartments, in parents' houses and even beyond [[Tethys ocean]].
 
@@ -15225,7 +15225,7 @@ On their agenda ([[and never before the food|Food addicts]]):
 
 •	Religionless world (out of the perception that religion is a personal thing, where each one chooses her own texts, not necessarily, and by her understanding)
 
-•	Expanding the combined mythologists with the existing mythologists
+•	Expanding the combined mythologies with the existing mythologies
 
 •	Metamorphosis (as a part of expanding the personal general mythologists, and out of the desire to find healing stories)
 
