--- a/index.html
+++ b/index.html
@@ -9262,7 +9262,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="המעבדה [[חשיפה לצפון]]" title="$:/StoryList">
+<div list="המעבדה [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9282,7 +9282,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200725173026186" title="$:/temp/search">
+<div created="20161023184814872" modified="20200725185759372" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -12999,7 +12999,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 &lt;&lt;englink [[The Masseur]]&gt;&gt;</pre>
 </div>
-<div created="20161113192814802" modified="20200725175914547" tags="בתים [[נאמני הגנזך]] [[מטא בדיון]] סגירים [[החיים נועדו למי שלא יכול להתמודד עם סמים]]" title="המעבדה">
+<div created="20161113192814802" modified="20200726141428459" tags="בתים [[נאמני הגנזך]] [[מטא בדיון]] סגירים [[החיים נועדו למי שלא יכול להתמודד עם סמים]]" title="המעבדה">
 <pre>[img[pictures/hamaabada.jpg]]
 
 ''כאן היינו (2002)''
@@ -13017,7 +13017,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 האחיות החלו פעילותן  בעיתות מצוקה, את הדמויות כתבו בניסיון לרפא עצמן ממפגשים אנושיים מכאיבים, ולשמח את ליבן בכל דרך אפשרית, אגב צפייה בשידורים חוזרים של [[אודטה|https://he.wikipedia.org/wiki/%D7%90%D7%95%D7%93%D7%98%D7%94_%D7%A9%D7%95%D7%95%D7%A8%D7%A5]], כאשר בבסיס יצירתן עומד המשפט של האחות הסופר [[ג'ון אירווינג]]: &quot;החיים רציניים אך האומנות היא תענוג&quot;.
 
-שמה ניתן לה מתוך רכישת כבוד ואהבה  לאחים היוצרים [[איתן וג'ואל כהן]] – שכותבים, מביימים ואף עורכים את סרטיהם. היא נוסדה על ידי נשים בנות דת משה, עיוורות בצבעי כחול ולבן. 
+שמה ניתן לה מתוך רכישת כבוד ואהבה  לאחים היוצרים [[איתן וג'ואל כהן]] – שכותבים, מביימים ואף עורכים את סרטיהם. היא נוסדה על ידי נשים [[בנות דת משה|https://he.wikipedia.org/wiki/%D7%A9%D7%91%D7%98%D7%99_%D7%99%D7%A9%D7%A8%D7%90%D7%9C]], עיוורות בצבעי כחול ולבן. 
 
 זוהי קבוצה הולכת ומתרחבת של אנשים, שהוקמה כסוג של בדיחה, וממשיכה להתקיים ברצינות תהומית, בהומור  ובענווה – בחדרים בקיבוצים, בדירות עירוניות, בבתי ההורים ואף מעבר ל[[ים טתיס]].
 
