--- a/english.html
+++ b/english.html
@@ -9164,7 +9164,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[The lab]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[The lab]] [[Tethys ocean]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200725185922691" title="$:/temp/search">
+<div created="20161023184814872" modified="20200726173145167" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -15193,7 +15193,7 @@ A K sister [[will forever be|HH]] a K sister
 
 </pre>
 </div>
-<div created="20200202172756391" modified="20200726141458924" tags="Metafiction Houses [[The archive's trustees]] Closers [[Life is for those who can't deal with drugs]]" title="The lab">
+<div created="20200202172756391" modified="20200726173206365" tags="Metafiction Houses [[The archive's trustees]] Closers [[Life is for those who can't deal with drugs]]" title="The lab">
 <pre>
 [img[pictures/hamaabada.jpg]]
 
@@ -15227,9 +15227,9 @@ On their agenda ([[and never before the food|Food addicts]]):
 
 •	Expanding the combined mythologies with the existing mythologies
 
-•	Metamorphosis (as a part of expanding the personal general mythologists, and out of the desire to find healing stories)
+•	Metamorphosis (as a part of expanding the personal general mythologies, and out of the desire to find healing stories)
 
-The sisters speak maximized Hebrew, as they do in this era.
+The sisters speak mixed Hebrew, as they do in this era.
 
 Right now (it's 2016 and we're in Paris), the lab/launching pad, is in [[Yoyo's|Yoyo]] room in the apartment, and other than the two of us the rest of the sisters are present.
 
