--- a/index.html
+++ b/index.html
@@ -1123,6 +1123,8 @@ Error message and password prompt
 
 <li>נסענו לאזכרה של אימא</li>
 
+<li>נשימה</li>
+
 <li>נשמה</li>
 
 <li>נתב</li>
@@ -9262,7 +9264,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="נשימה [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9282,7 +9284,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200726173319088" title="$:/temp/search">
+<div created="20161023184814872" modified="20200727123229554" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -13990,14 +13992,14 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[Torte]]&gt;&gt;</pre>
 </div>
-<div created="20200723145049512" modified="20200723184827350" tags="[[בדרך לאן שהוא]] [[סיפורים אמיתיים]] [[הלכות קורונה]]" title="טיפולים מהספה">
+<div created="20200723145049512" modified="20200727173839549" tags="[[בדרך לאן שהוא]] [[סיפורים אמיתיים]] [[הלכות קורונה]]" title="טיפולים מהספה">
 <pre>[img[pictures/sofatherapy.jpg]]
 
 
 
 !!![[רוז'ה]]:
 
-בעטיה של קורונה התמכרתי שוב לרביצה על הספה, הזמנת משלוחי מזון ושתייה, צפייה בסדרות, גידול כרס וחירפון כללי, אך המרפא העצמי שבי קרא אותי לסדר, וכך קרה שאגב הנ&quot;ל ארגנתי רשימת רעיונות לטיפול עצמי בעודך שוכב על הספה ומעכל, והיא תגיע לכאן בקרוב מגובה בציורים של גורה. 
+בעטיה של קורונה התמכרתי שוב לרביצה על הספה, הזמנת משלוחי מזון ושתייה, צפייה [[בסדרות|סדרות]], גידול כרס וחירפון כללי, אך המרפא העצמי שבי קרא אותי לסדר, וכך קרה שאגב הנ&quot;ל ארגנתי רשימת רעיונות לטיפול עצמי בעודך שוכב על הספה ומעכל, והיא תגיע לכאן בקרוב מגובה בציורים של גורה. 
 
 
 
@@ -16720,7 +16722,7 @@ We rise to play a greater part.
 
 &lt;&lt;englink [[Hand activator ]]&gt;&gt;</pre>
 </div>
-<div created="20190418113727292" modified="20200723153908958" tags="[[כאן בגטו]]" title="מפת הגטו">
+<div created="20190418113727292" modified="20200727173715092" tags="[[כאן בגטו]]" title="מפת הגטו">
 <pre>[img[pictures/ghettos-map.jpg]]
 
 !!![[תומר]]:
@@ -17155,6 +17157,17 @@ We rise to play a greater part.
 
 
 </pre>
+</div>
+<div created="20200727173240984" modified="20200728053257775" tags="[[טיפולים מהספה]] [[בדרך לאן שהוא]]" title="נשימה">
+<pre>
+[img[pictures/breathing.jpg]]
+
+!!![[רוז'ה]]:
+
+לפעמים אני פשוט נכנס הביתה ונשכב על הספה בטרח אחד. עוברות כמה דקות עד שאני שם לב שאפשר לחלוץ את המגפיים, להסיר את הגלימה, להניח איזו כרית מתחת לראש, ואולי אף מתחת לברכיים אחת או שתיים, להניח לצוואר להיות חופשי ולהתחיל לנשום. פנימה והחוצה. בשקט ובנחת. שאיפה שתיים שלוש ארבע, נשיפה שתיים שלוש ארבע. מתרכז בהכנסת והוצאת האוויר ובספירה וחוזר להיות בנאדם. 
+
+
+&lt;&lt;englink [[Breathing]]&gt;&gt;</pre>
 </div>
 <div created="20170914191116661" modified="20200217120810449" tags="[[מטא בדיון]] [[הכפר הגלובלי]]" title="נשמה">
 <pre>[img[pictures/neshama.jpg]]
@@ -20023,10 +20036,14 @@ Fapina''
 &lt;&lt;englink [[Chez Panisse]]&gt;&gt;
 </pre>
 </div>
-<div created="20161219172718131" modified="20200627221430486" tags="HH [[סיפורים אמיתיים]] [[הכפר הגלובלי]]" title="שואה">
+<div created="20161219172718131" modified="20200727183232383" tags="HH [[סיפורים אמיתיים]] [[הכפר הגלובלי]]" title="שואה">
 <pre>[img[pictures/shoa.jpg]]
 
 
+!!![[הצוות]]:
+
+
+כל שואה לגופה
 
 
 
