--- a/english.html
+++ b/english.html
@@ -351,6 +351,8 @@ Error message and password prompt
 
 <li>Breastplate sisters</li>
 
+<li>Breathing</li>
+
 <li>Cafe Müller</li>
 
 <li>Cafés</li>
@@ -9164,7 +9166,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[The lab]] [[Tethys ocean]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9184,7 +9186,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200726173145167" title="$:/temp/search">
+<div created="20161023184814872" modified="20200728065059859" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10052,6 +10054,18 @@ I'm a Jewish male, because I was born as Jewish male. My grandma's maiden name w
 
 
  &lt;&lt;heblink [[אחיות לחושן]]&gt;&gt;</pre>
+</div>
+<div created="20200727173405536" modified="20200727183728977" tags="[[Sofa therapy]] [[On the road to somewhere]]" title="Breathing">
+<pre>
+[img[pictures/breathing.jpg]]
+
+
+
+
+
+
+ &lt;&lt;heblink [[נשימה]]&gt;&gt;
+</pre>
 </div>
 <div created="20200216183951936" modified="20200625134314832" tags="HH" title="Cafe Müller">
 <pre>[img[pictures/cafe-muller.jpg]]
@@ -11187,7 +11201,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
  &lt;&lt;heblink [[עוגות תאנים]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212161010633" modified="20200725181628983" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
+<div created="20200212161010633" modified="20200727173657781" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -15194,8 +15208,7 @@ A K sister [[will forever be|HH]] a K sister
 </pre>
 </div>
 <div created="20200202172756391" modified="20200726173206365" tags="Metafiction Houses [[The archive's trustees]] Closers [[Life is for those who can't deal with drugs]]" title="The lab">
-<pre>
-[img[pictures/hamaabada.jpg]]
+<pre>[img[pictures/hamaabada.jpg]]
 
 
 ''here We were  (2002)''
